add: Wrapper class serialization